# devmind

./: .env.example  .gitignore  BUILD_REPORT.txt  LICENSE  Makefile  README.md  pyproject.toml
devmind/: __init__.py  cli.py
devmind/config/: __init__.py  settings.py
devmind/core/: agent.py  context.py  planner.py  safety.py  state_machine.py  task_manager.py
devmind/eval/: runner.py  scorer.py
devmind/eval/benchmarks/: 01_fibonacci.txt  02_todo_api.txt  03_portfolio_site.txt  04_csv_converter.txt  05_hn_scraper.txt  06_auth_api.txt  (+2 more)
devmind/llm/: backend_detector.py  model_manager.py  parser.py  prompts.py  resource_tracker.py  router.py
devmind/memory/: embeddings.py  file_indexer.py  long_term.py  short_term.py
devmind/modules/: code_generator.py  code_runner.py  code_runner.py.bak  debugger.py  doc_writer.py  exporter.py  fix_engine.py  reviewer.py  test_runner.py
devmind/tools/: api_tool.py  base.py  docker_tool.py  file_tool.py  git_tool.py  registry.py  shell_tool.py  test_tool.py
devmind/utils/: __init__.py  display.py  helpers.py  logger.py
devmind/workspace/: manager.py  sandbox.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  MODELS.md  README.md  ROADMAP.md  SAFETY.md  SETUP.md  TOOLS.md  USAGE.md
examples/prompts/: todo_api.txt
tests/integration/: test_agent_loop.py
tests/mvp/: test_backend_detector.py  test_cli.py  test_file_tool.py  test_safety.py  test_shell_tool.py  test_state_machine.py
tests/v1/: test_embeddings.py  test_local_router.py  test_memory.py  test_model_manager.py  test_patch_engine.py  test_sandbox.py
(+6 files in other folders)
