[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmind"
version = "3.0.0"
description = "DevMind V3 — Autonomous CLI AI coding agent powered by local LLMs"
readme = "docs/README.md"
requires-python = ">=3.10"
authors = [{name = "DevMind"}]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "psutil>=5.9",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
embed = [
  "sentence-transformers>=2.7",
]

[project.scripts]
devmind = "devmind.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["devmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
